npm build added

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
 
 .name {
   font-size: 1.55rem;
-  color: #2d3436;
+  color: #1e2324;
   display: flex;
   flex: 1;
   margin: 10% 20px 0;
